--- a/app/assets/stylesheets/modules/_site-footer.scss
+++ b/app/assets/stylesheets/modules/_site-footer.scss
@@ -200,4 +200,10 @@
     color: #d0aa69 !important;
   }
 
+  @media screen and (max-width: 750px) and (min-width: 150px){
+    .logo{
+      margin-right: 57px !important;
+    }
+  }
+
 }
